--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         
       </div><!-- end header -->
 
-    <div class="wrapper">
+    <div align="center" class="wrapper">
 
       <section>
         <div id="title">
