--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,10 @@
 
         {{ content }}
 
+        <!-- <a href="https://twitter.com/intent/tweet?button_hashtag=househilton&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #LoveTwitter</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+        {% twitter https://twitter.com/dragoncon maxwidth=500 limit=50 %} -->
+
       </section>
 
     </div>
